--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,14 +9,18 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgb(129, 36, 210) 0%,
+    rgba(24, 22, 39, 1) 90%
+  );
+  background-attachment: fixed;
   font-family: Arial, Helvetica, sans-serif;
 }
 
