--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,15 +13,16 @@
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   color: var(--foreground);
-  background-image: radial-gradient(
-    circle farthest-corner at 10% 20%,
-    rgb(129, 36, 210) 0%,
-    rgba(24, 22, 39, 1) 90%
-  );
-  background-attachment: fixed;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #130828;
 }
 
 @layer utilities {
