--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,63 @@ body {
     text-wrap: balance;
   }
 }
+
+#message {
+  background: #232627; /* Card Background */
+  max-width: 360px;
+  margin: 100px auto 16px;
+  padding: 32px 24px;
+  border-radius: 3px;
+  color: #FFFFFF; /* Primary Text */
+}
+
+#message h2 {
+  color: #00D7FF; /* Highlight/Accent Color */
+  font-weight: bold;
+  font-size: 16px;
+  margin: 0 0 8px;
+}
+
+#message h1 {
+  font-size: 22px;
+  font-weight: 300;
+  color: #ACADB9; /* Secondary Text */
+  margin: 0 0 16px;
+}
+
+#message p {
+  line-height: 140%;
+  margin: 16px 0 24px;
+  font-size: 14px;
+}
+
+#message a {
+  display: block;
+  text-align: center;
+  background: #262450; /* Button Background */
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  padding: 16px;
+  border-radius: 4px;
+}
+
+#message,
+#message a {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+#load {
+  color: rgba(255, 255, 255, 0.4); /* Lighter Text for Loading */
+  text-align: center;
+  font-size: 13px;
+}
+
+@media (max-width: 600px) {
+  body,
+  #message {
+    margin-top: 0;
+    background: #130828;
+    box-shadow: none;
+  }
+}
